syntax = "proto3";

package common.basic.response;

message SuccessResponse {
  string message = 1;
}
